# phone-mcp-server

./: .gitignore  README.md  README_CN.md  http_server.py  mcp_server.py  pyproject.toml
phone_control/: __init__.py  adb_backend.py  appium_backend.py  appium_manager.py  backend.py  policy.py  sanitize.py
